<?xml version="1.0"?>
<package format="2">
  <name>rosaya_controller</name>
  <version>0.0.0</version>
  <description>The rosaya_controller package</description>

  <maintainer email="pocketros@todo.todo">pocketros</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <exec_depend>control_msgs</exec_depend>

  <export>
  </export>
</package>
